--- a/app/src/main/res/layout/activity_admin_create_user.xml
+++ b/app/src/main/res/layout/activity_admin_create_user.xml
@@ -58,9 +58,25 @@
             android:padding="24dp">
 
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Type to search user by email">
+
+                <AutoCompleteTextView
+                    android:id="@+id/acUserSearchEmail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textEmailAddress"
+                    android:padding="16dp"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/layoutFullName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:hint="Full Name">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etFullName"
@@ -135,39 +151,13 @@
                     android:inputType="textPostalAddress"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                android:id="@+id/tvAdminRoleLabel"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Select User Role"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="12sp"/>
-
-            <Spinner
-                android:id="@+id/spinnerCreateUserRole"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:spinnerMode="dropdown"/>
-
-            <Button
-                android:id="@+id/btnGoToCreateRole"
-                style="?android:attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:text="Create New Role"
-                android:textAllCaps="false" />
-
             <Button
                 android:id="@+id/btnAdminCreateUser"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:padding="12dp"
-                android.text="Create User"
+                android:text="Create User"
                 android:textSize="16sp"/>
 
         </LinearLayout>
