--- a/app/src/main/res/layout/activity_create_user_role.xml
+++ b/app/src/main/res/layout/activity_create_user_role.xml
@@ -32,7 +32,7 @@
             android:id="@+id/tvHeaderTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create User Role"
+            android:text="Create User Profile"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -47,7 +47,7 @@
         android:layout_height="0dp"
         android:orientation="vertical"
         android:padding="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
+        app:layout_constraintTop_toBottomOf="@id/headerLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
